tests/machine/x/python/tree_sum.error
run: exit status 1
Traceback (most recent call last):
  File "/workspace/mochi/tests/machine/x/python/tree_sum.py", line 52, in <module>
    main()
  File "/workspace/mochi/tests/machine/x/python/tree_sum.py", line 48, in main
    print(sum_tree(t))
          ^^^^^^^^^^^
  File "/workspace/mochi/tests/machine/x/python/tree_sum.py", line 9, in sum_tree
    return (
           ^
  File "/workspace/mochi/tests/machine/x/python/tree_sum.py", line 14, in <lambda>
    (
  File "/workspace/mochi/tests/machine/x/python/tree_sum.py", line 16, in <lambda>
    (sum_tree(left) + value) + sum_tree(right)
     ~~~~~~~~~~~~~~~^~~~~~~
TypeError: unsupported operand type(s) for +: 'NoneType' and 'int'

